static/css/style.css
.flashes h4 {
    line-height: 1.5;
}

.caption,
.card-title {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
}

.register-btn {
    text-shadow: none;
}

#popular .row {
    margin-bottom: 0;
}

.social .fa-3x {
    margin: 10px 5px;
}

div.input-field.col.s6.s10.offset-m1 {
    margin-top: 50px;
}

#destination_card div.input-field.col.s6.s10.offset-m1 {
    margin: 50px;
}

.btn-small {
    margin: 5px;
}

.itinerary-btn {
    padding-right: 50px;
}

.collapsible-header.center.white-text.light-blue.accent-2 {
    line-height: 42px;
    padding-top: 1rem;
}

div.container.row.card-panel.light-blue-text.text-darken-1 {
    margin: 0;
}

nav.nav-extended .nav-wrapper {
    min-height: 63px;
    height: auto;
}


nav .brand-logo-text {
    position: absolute;
    text-align: left;
    display: inline-block;
    color: #fff;
    font-size: 1.3rem;
    padding-left: 80px;
}

div#social.row {
    padding-top: 20px;
}

div.section_row.row {
    margin-bottom: 0px;
}

hr {
    width: 50%;
}

/*-------------------- Media Queries ---------------------*/

/* Small devices (landscape phones, 560px and up) */
@media (min-width: 576px) {
    .trip-type {
        width: 80%;
        height: 80px;
    }
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .trip-type {
        height: 110px;
    }

    h3 {
        font-size: 2.8rem;
    }

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .trip-type {
        height: 190px;
    }
}

/*Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    .trip-type {
        height: 190px;
    }
}

